# ChangeLog for dev-python/twisted-web
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted-web/ChangeLog,v 1.30 2008/03/12 18:40:55 phreak Exp $

  12 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Marien Zwart (marienz, #107204) from metadata.xml.

  09 Jun 2007; Joe Peterson <lavajoe@gentoo.org> twisted-web-0.7.0.ebuild:
  Add ~x86-fbsd keyword

  12 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  twisted-web-0.6.0.ebuild:
  Stable on sparc

  12 Mar 2007; Raúl Porcel <armin76@gentoo.org> twisted-web-0.6.0.ebuild:
  x86 stable

*twisted-web-0.7.0 (11 Jan 2007)

  11 Jan 2007; Marien Zwart <marienz@gentoo.org> twisted-web-0.6.0.ebuild,
  -twisted-web-0.6.0-r1.ebuild, +twisted-web-0.7.0.ebuild:
  Version bump, make twisted dependency stricter, drop revision patched to
  work with python 2.5 (use the new bump instead).

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  twisted-web-0.6.0.ebuild:
  Stable on Alpha.

  01 Aug 2006; Simon Stelling <blubb@gentoo.org>
  twisted-web-0.5.0-r1.ebuild:
  stable on amd64

  16 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  twisted-web-0.6.0.ebuild:
  hppa stable, bug #139612

  12 Jul 2006; Aron Griffis <agriffis@gentoo.org> twisted-web-0.5.0-r3.ebuild,
  twisted-web-0.6.0.ebuild:
  Mark 0.5.0-r3 0.6.0 stable on ia64 #128688

  02 Jul 2006; Lars Weiler <pylon@gentoo.org> twisted-web-0.6.0.ebuild:
  Stable on ppc.

  30 Jun 2006; Thomas Cort <tcort@gentoo.org> twisted-web-0.5.0-r1.ebuild:
  Stable on alpha wrt Bug #128688.

  28 Jun 2006; Luis Medinas <metalgod@gentoo.org> twisted-web-0.6.0.ebuild:
  Stable on amd64. See bug #124293.

*twisted-web-0.6.0-r1 (26 Jun 2006)
*twisted-web-0.5.0-r3 (26 Jun 2006)

  26 Jun 2006; Marien Zwart <marienz@gentoo.org>
  -files/twisted-web-0.5.0-tests-2.2-compat-14780.patch,
  -files/twisted-web-0.5.0-tests-2.2-compat-14782.patch,
  -files/twisted-web-0.5.0-tests-2.2-compat-14786.patch,