@@ -1,5 +1,7 @@
 AUX twisted-web-0.5.0-root-skip.patch 475 RMD160 5a93f37912c00bb9f8b139b54c68901b36d4093e SHA1 f06d91d40e3e85429b2a29beebb5424620431374 SHA256 619682d0267629476a7d783f7827ef1ceb56fd11a97fdbe7623ba72b33c98ecd
 DIST TwistedWeb-0.7.0.tar.bz2 263183 RMD160 7e1c2cf1a2984a298bd2af3d3d983f559ed43e00 SHA1 fefc02f5d72e5693e57f5970b6be639af5a31db1 SHA256 7b934d11d3920c18e1f85fb78352b5b232fa68c10ec218085abdedd167a380f1
-EBUILD twisted-web-0.7.0.ebuild 565 RMD160 5b4ec096b108a59323f4be22511d0be3aa6ae850 SHA1 f8f2acb6b4f3ac53642d6947d897ce9a94fbb5ec SHA256 a09f45966843ebf826cd4553ebe333d90596576071127323011bb7b3f53a2da9
-MISC ChangeLog 4796 RMD160 cd8c4182726725478ffe0f2a37b04fb5e74b1681 SHA1 5abf7aeca8f08d28eb054862f365b2bd6e8b2255 SHA256 47658aac68d0f56a28fa737e1318bad37891880387b97789a08c9a2344c7b34c
+DIST TwistedWeb-8.0.0.tar.bz2 274859 RMD160 1de0e8d8d89e9c2eda981b4a24ecd2d41aedc6a6 SHA1 435acadcf4b67052f3fdcba2e6662882539adac0 SHA256 3e0a9cbf7ffcd211c3622bfc97c83ecee9f4431d4789465ad6abb5ccf2415334
+EBUILD twisted-web-0.7.0.ebuild 553 RMD160 13dc6a711758ab69788f81f31b9d3e842669f122 SHA1 74733d9cea137c7d365826d4c6583398cc22762c SHA256 3cb16fe1f3cae3bbb0d4046812c73cf225cdbf713227007453db8b4b513ff657
+EBUILD twisted-web-8.0.0.ebuild 596 RMD160 6bc81e6596b4a338f5be5953cfd1f7ab9f982ce2 SHA1 b5228295828cd735002338f9c1bce2020e76258d SHA256 2ae197d3cc1c5c46e1cd46851e99bd5152fe5f9aa8ca0d709590c092c0eb3513
+MISC ChangeLog 4923 RMD160 3f0a7c5a31912c152048eeb8e92a873b3c371d41 SHA1 7d46c41d0fa6bdf4a3efce2e94c8de128035511b SHA256 79d29fa920abf75a50e9f1c4ff571c047c6af576d4fec423a58d25a246202671
 MISC metadata.xml 160 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb SHA1 2aa5e6be9c265c0e7bceb78ee9fd20df5f818e36 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a
